--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.6.8",
+    "material-react-table": "^2.12.1",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "url": "^0.11.3",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
